galley/testdata/validation/dataset/authentication-v1alpha1-ServiceMeshPolicy-invalid.yaml
apiVersion: authentication.maistra.io/v1
kind: ServiceMeshPolicy
metadata:
  name: "boo"
  namespace: "istio-system"
spec:
  peers:
    - mtls:
        mode: PERMISSIVE
