galley/testdata/validation/dataset/config-v1alpha2-instance-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: instance
metadata:
  name: source-info
spec:
  template: listentry
  params:
    value: source.name | "unknown"
