galley/testdata/validation/dataset/config-v1alpha2-QuotaSpec-valid.yaml
apiVersion: config.istio.io/v1alpha2
kind: QuotaSpec
metadata:
  name: valid-quota-spec
spec:
  rules:
  - match:
    - clause:
        api.operation:
          exact: getProducts
    quotas:
    - charge: 1
      quota: read-requests
