galley/testdata/validation/dataset/networking-v1alpha3-Sidecar-valid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: valid-sidecar-config
spec:
  egress:
  - hosts:
    - "abc/*"
