galley/testdata/validation/dataset/rbac-v1alpha1-AuthorizationPolicy-valid.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bind-service-viewer
spec:
  allow:
    - role: service-viewer
      subjects:
        - names:
            - foo
  workloadSelector:
    labels:
      app: ratings
