galley/testdata/validation/dataset/rbac-v1alpha1-ClusterRbacConfig-invalid.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_EXCLUSION'
