galley/testdata/validation/dataset/rbac-v1alpha1-ServiceMeshRbacConfig-invalid.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceMeshRbacConfig
metadata:
  name: default
  namespace: istio-system
spec:
  mode: 'ON_WITH_EXCLUSION'
