galley/testdata/validation/dataset/security-v1beta1-RequestAuthentication-invalid.yaml
apiVersion: "seurity.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: invalid-request-authentication
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  jwtRules:
  - issuer: ""
